RESOLVED FIXED157978
JSBoundSlotBaseFunction no longer binds slot base
https://bugs.webkit.org/show_bug.cgi?id=157978
Summary JSBoundSlotBaseFunction no longer binds slot base
Gavin Barraclough
Reported 2016-05-22 09:54:32 PDT
This class is basically currently named after a bug. We should never have been binding function to slot bases - this was not ever correct behavior. This was fixed earlier in the year, but there is still some cruft including the class name to clean up.
Attachments
Fix (48.04 KB, patch)
2016-05-22 22:15 PDT, Gavin Barraclough
ggaren: review-
Updated patch for EWS (48.23 KB, patch)
2016-06-12 18:14 PDT, Gavin Barraclough
no flags
Updated patch for EWS (48.24 KB, patch)
2016-06-12 18:23 PDT, Gavin Barraclough
no flags
Updated patch for EWS (48.38 KB, patch)
2016-06-12 18:27 PDT, Gavin Barraclough
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-yosemite (905.95 KB, application/zip)
2016-06-12 19:31 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (1.06 MB, application/zip)
2016-06-12 19:33 PDT, Build Bot
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (658.31 KB, application/zip)
2016-06-12 19:35 PDT, Build Bot
no flags
Archive of layout-test-results from ews113 for mac-yosemite (1.22 MB, application/zip)
2016-06-12 19:39 PDT, Build Bot
no flags
Updated patch for EWS (48.40 KB, patch)
2016-06-13 00:12 PDT, Gavin Barraclough
no flags
Gavin Barraclough
Comment 1 2016-05-22 22:15:22 PDT
Geoffrey Garen
Comment 2 2016-05-23 11:17:10 PDT
Comment on attachment 279554 [details] Fix rs=me if you rebase
Yusuke Suzuki
Comment 3 2016-06-05 18:57:31 PDT
I've just landed r201703, it allows this patch to be landed!
Gavin Barraclough
Comment 4 2016-06-12 18:14:48 PDT
Created attachment 281136 [details] Updated patch for EWS
WebKit Commit Bot
Comment 5 2016-06-12 18:17:40 PDT
Attachment 281136 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/JSGlobalObject.cpp:68: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/JSObject.cpp:40: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/JSCustomGetterSetterFunction.h:66: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 6 2016-06-12 18:23:50 PDT
Created attachment 281138 [details] Updated patch for EWS
WebKit Commit Bot
Comment 7 2016-06-12 18:24:49 PDT
Attachment 281138 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/JSGlobalObject.cpp:68: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/JSObject.cpp:40: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/JSCustomGetterSetterFunction.h:66: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 8 2016-06-12 18:27:47 PDT
Created attachment 281140 [details] Updated patch for EWS
Build Bot
Comment 9 2016-06-12 19:31:23 PDT
Comment on attachment 281140 [details] Updated patch for EWS Attachment 281140 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1492234 New failing tests: imported/w3c/web-platform-tests/html/dom/interfaces.html js/dom/native-bindings-descriptors.html js/function-toString-vs-name.html
Build Bot
Comment 10 2016-06-12 19:31:26 PDT
Created attachment 281141 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 11 2016-06-12 19:33:06 PDT
Comment on attachment 281140 [details] Updated patch for EWS Attachment 281140 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1492237 New failing tests: imported/w3c/web-platform-tests/html/dom/interfaces.html js/dom/native-bindings-descriptors.html js/function-toString-vs-name.html
Build Bot
Comment 12 2016-06-12 19:33:09 PDT
Created attachment 281142 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 13 2016-06-12 19:35:23 PDT
Comment on attachment 281140 [details] Updated patch for EWS Attachment 281140 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1492229 New failing tests: js/dom/native-bindings-descriptors.html js/function-toString-vs-name.html
Build Bot
Comment 14 2016-06-12 19:35:25 PDT
Created attachment 281143 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 15 2016-06-12 19:39:17 PDT
Comment on attachment 281140 [details] Updated patch for EWS Attachment 281140 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1492240 New failing tests: js/dom/native-bindings-descriptors.html js/function-toString-vs-name.html
Build Bot
Comment 16 2016-06-12 19:39:20 PDT
Created attachment 281144 [details] Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Gavin Barraclough
Comment 17 2016-06-13 00:12:47 PDT
Created attachment 281161 [details] Updated patch for EWS
Gavin Barraclough
Comment 18 2016-06-13 23:03:06 PDT
Committed revision 202027.
Note You need to log in before you can comment on or make changes to this bug.